Hopefully fix flickering

--- a/css/our-partners/partners.css
+++ b/css/our-partners/partners.css
@@ -57,7 +57,7 @@
   letter-spacing: 0.1em;
   font-weight: 600;
   background: var(--primaryColor);
-  box-shadow: inset 0 0 0 0 var(--primaryTextColor);
+  box-shadow: inset 0 0 0 0.09px var(--primaryTextColor);
   transition: all ease-out 0.3s;
 }
 
